--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -164,7 +164,7 @@ Log4j $Log4jReleaseVersion is the latest release of Log4j. As of Log4j 2.13.0 Lo
 runtime. This release contains new features and fixes which can be found
 in the latest [changes report](changes-report.html#a$Log4jReleaseVersion).
 
-Some of the new features in Log4j 2.15.0 include:
+Some of the new features in Log4j 2.15.1 include:
 
 * Support for Arbiters, which are conditionals that can enable sections of the logging configuration
 for inclusion or exclusion. In particular, SpringProfile, SystemProperty, Script, and Class Arbiters have been
@@ -172,5 +172,6 @@ provided that use the Spring profile, System property, the result of a script, o
 to determine whether a section of configuration should be included.
 * Support for Jakarta EE 9. This is functionally equivalent to Log4j's log4j-web module but uses the Jakarta project.
 * Various performance improvements.
+* Disabling JNDI functionality by default.
 
 Log4j $Log4jReleaseVersion maintains binary compatibility with previous releases.
